[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/game-tiles.png" type="Texture" id=1]
[ext_resource path="res://objects/Platform.gd" type="Script" id=2]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25.25, 2.25 )

[sub_resource type="DynamicFont" id=2]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Platform" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 28, 9.5 )
shape = SubResource( 1 )
one_way_collision = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 26.5, 9 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 1, 37.8447, 57, 13.3333 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 163.5, 6 )
shape = SubResource( 1 )
one_way_collision = true

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 162.5, 6 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 1, 37.178, 57, 14 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2( 321.25, 3.75 )
shape = SubResource( 1 )
one_way_collision = true

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 318.5, 6.5 )
scale = Vector2( 1, 0.928571 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 1, 37.178, 57, 14 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="."]
position = Vector2( 450.5, 6 )
shape = SubResource( 1 )
one_way_collision = true

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 450, 9 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 1, 37.178, 57, 14.6667 )

[node name="Label" type="Label" parent="."]
margin_left = 10.0
margin_top = 21.0
margin_right = 50.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )

[node name="Label2" type="Label" parent="."]
margin_left = 147.0
margin_top = 16.0
margin_right = 187.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )

[node name="Label3" type="Label" parent="."]
margin_left = 298.0
margin_top = 15.0
margin_right = 338.0
margin_bottom = 29.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )

[node name="Label4" type="Label" parent="."]
margin_left = 432.0
margin_top = 16.0
margin_right = 472.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="."]
position = Vector2( 125, 160 )
shape = SubResource( 1 )
one_way_collision = true

[node name="Sprite5" type="Sprite" parent="."]
position = Vector2( 126.5, 162 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 1, 37.178, 57, 14.6667 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="."]
position = Vector2( 330.5, 284 )
shape = SubResource( 1 )
one_way_collision = true

[node name="Sprite6" type="Sprite" parent="."]
position = Vector2( 331.5, 285 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 1, 37.178, 57, 14.6667 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="."]
position = Vector2( 179.5, 429 )
shape = SubResource( 1 )
one_way_collision = true

[node name="Sprite7" type="Sprite" parent="."]
position = Vector2( 179.5, 433 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 1, 37.178, 57, 14.6667 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="."]
position = Vector2( 338, 566 )
shape = SubResource( 1 )
one_way_collision = true

[node name="Sprite8" type="Sprite" parent="."]
position = Vector2( 339.5, 569 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 1, 37.178, 57, 14.6667 )
